[build-system]
requires = ["setuptools>=61.0", "pybind11", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled=true

[project]
name = "cholesky_decomposer"
dynamic = ["version"]
authors = [
  { name="Chris MacLellan", email="cmaclell@gatech.edu" },
]
description = "A light weight wrapper around the C++ eigen's library for efficient cholesky decomposition over numpy arrays."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/cmaclell/cholesky_decomposer"

