[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "cholesky_decomposer"
version = "0.0.1"
authors = [
  { name="Chris MacLellan", email="cmaclell@gatech.edu" },
]
description = "A light weight wrapper around the C++ eigen's library for efficient cholesky decomposition over numpy arrays."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/cmaclell/cholesky_decomposer"

